--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+battery = "0.7.8"
 crossterm = "0.28.1"
 lazy_static = "1.5.0"
 regex = "1.11.1"
 serde_json = "1.0.138"
 sysinfo = "0.33.1"
+unicode-width = "0.2.0"
